# ta4r

./: .gitignore  AUTHORS  Cargo.toml  LICENSE  README.md
ta4r/: Cargo.toml
ta4r-examples/: Cargo.toml
ta4r-examples/src/: lib.rs  main.rs
ta4r-examples/src/assets/: XRPUSD_251226-5m-2025-08-22.csv
ta4r-examples/src/backtests/: mod.rs
ta4r-examples/src/indicators/: mod.rs
ta4r-examples/src/loaders/: csv_bars_loader.rs  mod.rs
ta4r-examples/src/strategies/: mod.rs  trading_bot_on_moving_bar_series.rs  trading_bot_on_moving_bar_series_bake.rs
ta4r/src/: base_trading_record.rs  lib.rs  position.rs  trade.rs
ta4r/src/aggregator/: base_bar_series_aggregator.rs  duration_bar_aggregator.rs  heikin_ashi_bar_aggregator.rs  mod.rs  types.rs
ta4r/src/analysis/: cost.rs  mod.rs
ta4r/src/bar/: base_bar.rs  base_bar_series.rs  base_bar_series_builder.rs  mod.rs  types.rs
ta4r/src/indicators/: abstract_indicator.rs  atr_indicator.rs  cached_aux_indicator.rs  cached_indicator.rs  mod.rs  numeric.rs  recursive_cached_indicator.rs  types.rs
ta4r/src/num/: bool_num.rs  bool_num_factory.rs  decimal_num.rs  decimal_num_factory.rs  double_num.rs  double_num_factory.rs  mod.rs  nan.rs  nan_factory.rs  types.rs
ta4r/src/rule/: and_rule.rs  average_true_range_stop_gain_rule.rs  average_true_range_stop_loss_rule.rs  average_true_range_trailing_stop_loss_rule.rs  base_rule.rs  bool_rule.rs  boolean_indicator_rule.rs  chain_rule.rs  crossed_down_indicator_rule.rs  crossed_up_indicator_rule.rs  day_of_week_rule.rs  fixed_rule.rs  helper.rs  in_pipe_rule.rs  in_slope_rule.rs  (+18 more)
(+124 files in other folders)
