[package]
name = "ta4r-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { version = "0.3.41", features = ["macros", "parsing"] }
time-macros = "0.2.22"
chrono = "0.4.41"
csv = "1.3.1"
log = "0.4.27"
ta4r = { path = "../ta4r" }
thiserror = "2.0.12"
rand = "0.8.5"
num-traits = "0.2.19"
parking_lot = "0.12.4"